Add the display of the list of injected processes

--- a/ScreenshotHook.Presentation/Views/MainWindow.xaml
+++ b/ScreenshotHook.Presentation/Views/MainWindow.xaml
@@ -21,6 +21,7 @@
     <Window.Resources>
         <converters:ColorToBrushConverter x:Key="ColorToBrushConverter" />
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+        <converters:CountToVisibilityConverter x:Key="CountToVisibilityConverter" />
         <SolidColorBrush x:Key="mainColor" Color="#2196F3" />
         <behaviors:ScrollOnMouseWheelBehavior x:Key="ScrollOnMouseWheelBehavior" />
 
@@ -273,7 +274,7 @@
                                     <RowDefinition Height="*" />
                                 </Grid.RowDefinitions>
 
-                                <Grid Grid.Row="0" Margin="0,10">
+                                <Grid Grid.Row="0" Margin="0,5">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
@@ -288,7 +289,7 @@
                                         Text="{Binding Watermark.Text, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
 
-                                <Grid Grid.Row="1" Margin="0,10">
+                                <Grid Grid.Row="1" Margin="0,5">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="50" />
@@ -308,7 +309,7 @@
                                             SelectedItem="{Binding Watermark.FontFamily}" />
                                     </Grid>
 
-                                    <Grid Grid.Column="2">
+                                    <Grid Grid.Column="2" Margin="0,5">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
@@ -322,7 +323,7 @@
                                     </Grid>
                                 </Grid>
 
-                                <Grid Grid.Row="2" Margin="0,10">
+                                <Grid Grid.Row="2" Margin="0,5">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="*" />
@@ -331,12 +332,9 @@
                                         <RowDefinition Height="*" />
                                     </Grid.RowDefinitions>
 
-                                    <TextBlock
-                                        Margin="0,10"
-                                        VerticalAlignment="Center"
-                                        Text="颜色：" />
+                                    <TextBlock VerticalAlignment="Center" Text="颜色：" />
 
-                                    <Grid Grid.Row="1" Margin="0,10">
+                                    <Grid Grid.Row="1">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
@@ -406,6 +404,92 @@
                                 </Grid>
                             </Grid>
                         </ScrollViewer>
+                    </Grid>
+                </TabItem>
+
+                <TabItem Header="已注入进程">
+                    <Grid Margin="10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+
+                        <Border BorderBrush="Gray" BorderThickness="0,0,0,1">
+                            <Grid Margin="0,5,0,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="60" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="140" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock HorizontalAlignment="Center" Text="进程ID" />
+                                <TextBlock
+                                    Grid.Column="1"
+                                    HorizontalAlignment="Center"
+                                    Text="进程名" />
+                                <TextBlock
+                                    Grid.Column="2"
+                                    HorizontalAlignment="Center"
+                                    Text="操作" />
+                            </Grid>
+                        </Border>
+
+                        <Grid Grid.Row="1">
+                            <ScrollViewer
+                                BorderBrush="LightGray"
+                                BorderThickness="1"
+                                HorizontalScrollBarVisibility="Hidden"
+                                VerticalScrollBarVisibility="Auto">
+                                <ItemsControl ItemsSource="{Binding HookedProcesses}">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid Margin="0,2">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="60" />
+                                                    <ColumnDefinition Width="*" />
+                                                    <ColumnDefinition Width="140" />
+                                                </Grid.ColumnDefinitions>
+                                                <TextBlock
+                                                    HorizontalAlignment="Center"
+                                                    VerticalAlignment="Center"
+                                                    Text="{Binding ProcessId}" />
+                                                <TextBlock
+                                                    Grid.Column="1"
+                                                    HorizontalAlignment="Center"
+                                                    VerticalAlignment="Center"
+                                                    Text="{Binding ProcessName}" />
+
+                                                <StackPanel
+                                                    Grid.Column="2"
+                                                    HorizontalAlignment="Center"
+                                                    Orientation="Horizontal">
+                                                    <Button
+                                                        Width="60"
+                                                        Height="30"
+                                                        Command="{Binding DataContext.SelectCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                                                        CommandParameter="{Binding}"
+                                                        Content="选中" />
+                                                    <Button
+                                                        Width="60"
+                                                        Height="30"
+                                                        Margin="5,0"
+                                                        Background="IndianRed"
+                                                        Command="{Binding DataContext.RemoveCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                                                        CommandParameter="{Binding}"
+                                                        Content="移除" />
+                                                </StackPanel>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </ScrollViewer>
+
+                            <TextBlock
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Foreground="Gray"
+                                Text="暂无已注入的进程"
+                                Visibility="{Binding HookedProcesses.Count, Converter={StaticResource CountToVisibilityConverter}}" />
+                        </Grid>
                     </Grid>
                 </TabItem>
             </TabControl>
