--- a/ScreenshotHook.Presentation/Views/MainWindow.xaml
+++ b/ScreenshotHook.Presentation/Views/MainWindow.xaml
@@ -178,10 +178,12 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock VerticalAlignment="Center"
                                            FontSize="16"
-                                           Text="Filer Process: " />
+                                           Margin="10,0,0,0"
+                                           Text="筛选进程: " />
 
                                 <TextBox Grid.Column="1"
-                                         Height="40"
+                                         Height="40" 
+                                         Margin="10,0,0,0"
                                          VerticalAlignment="Center"
                                          VerticalContentAlignment="Center"
                                          FontSize="16"
