--- a/ScreenshotHook.Presentation/Views/MainWindow.xaml
+++ b/ScreenshotHook.Presentation/Views/MainWindow.xaml
@@ -24,6 +24,7 @@
         <converters:CountToVisibilityConverter x:Key="CountToVisibilityConverter" />
         <SolidColorBrush x:Key="mainColor" Color="#2196F3" />
         <behaviors:ScrollOnMouseWheelBehavior x:Key="ScrollOnMouseWheelBehavior" />
+        <behaviors:TextBoxCaretBehavior x:Key="TextBoxCaretBehavior" />
 
         <Style x:Key="cbxTbStyle" TargetType="TextBlock">
             <Setter Property="Foreground" Value="Black" />
@@ -182,12 +183,16 @@
                                            Text="筛选进程: " />
 
                                 <TextBox Grid.Column="1"
-                                         Height="40" 
+                                         Height="40"
                                          Margin="10,0,0,0"
                                          VerticalAlignment="Center"
                                          VerticalContentAlignment="Center"
                                          FontSize="16"
-                                         Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}" />
+                                         Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}">
+                                         <i:Interaction.Behaviors>
+                                             <behaviors:TextBoxCaretBehavior />
+                                         </i:Interaction.Behaviors>
+                                </TextBox>
 
                                 <Button Grid.Column="2"
                                         Width="100"
@@ -289,7 +294,11 @@
                                     <TextBox Grid.Column="1"
                                              Height="30"
                                              VerticalContentAlignment="Center"
-                                             Text="{Binding Watermark.Text, UpdateSourceTrigger=PropertyChanged}" />
+                                             Text="{Binding Watermark.Text, UpdateSourceTrigger=PropertyChanged}">
+                                             <i:Interaction.Behaviors>
+                                                 <behaviors:TextBoxCaretBehavior />
+                                             </i:Interaction.Behaviors>
+                                    </TextBox>
                                 </Grid>
 
                                 <Grid Grid.Row="1" Margin="0,5">
