--- a/ScreenshotHook.Presentation/Views/MainWindow.xaml
+++ b/ScreenshotHook.Presentation/Views/MainWindow.xaml
@@ -18,11 +18,12 @@
         WindowStyle="None">
 
     <Window.Resources>
+        <SolidColorBrush x:Key="mainColor" Color="#2196F3" />
         <converters:ColorToBrushConverter x:Key="ColorToBrushConverter" />
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         <converters:InverseBoolConverter x:Key="InverseBoolConverter" />
         <converters:CountToVisibilityConverter x:Key="CountToVisibilityConverter" />
-        <SolidColorBrush x:Key="mainColor" Color="#2196F3" />
+        <converters:ByteRangeConverter x:Key="ByteRangeConverter" />
         <behaviors:ScrollOnMouseWheelBehavior x:Key="ScrollOnMouseWheelBehavior" />
         <behaviors:TextBoxCaretBehavior x:Key="TextBoxCaretBehavior" />
 
@@ -349,15 +350,20 @@
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="80" />
                                         </Grid.ColumnDefinitions>
-
+                                        
                                         <TextBlock VerticalAlignment="Center" Text="R:" />
-
                                         <Slider Grid.Column="1" Value="{Binding Watermark.ColorR}" />
                                         <TextBlock Grid.Column="2"
                                                    Width="30"
                                                    Text="{Binding Watermark.ColorR}"
+                                                   VerticalAlignment="Center"
                                                    TextAlignment="Right" />
+                                        <TextBox Grid.Column="3"  
+                                                 Margin="20,0"
+                                                 VerticalAlignment="Center" 
+                                                 Text="{Binding Watermark.ColorR,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource ByteRangeConverter}}" />
                                     </Grid>
 
                                     <Grid Grid.Row="2" Margin="0,10">
@@ -365,15 +371,19 @@
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="80" />
                                         </Grid.ColumnDefinitions>
 
                                         <TextBlock VerticalAlignment="Center" Text="G:" />
-
                                         <Slider Grid.Column="1" Value="{Binding Watermark.ColorG}" />
                                         <TextBlock Grid.Column="2"
                                                    Width="30"
                                                    Text="{Binding Watermark.ColorG}"
                                                    TextAlignment="Right" />
+                                        <TextBox Grid.Column="3"  
+                                                 Margin="20,0"
+                                                 VerticalAlignment="Center" 
+                                                 Text="{Binding Watermark.ColorG,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource ByteRangeConverter}}" />
                                     </Grid>
 
                                     <Grid Grid.Row="3" Margin="0,10">
@@ -381,15 +391,19 @@
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="80" />
                                         </Grid.ColumnDefinitions>
 
                                         <TextBlock VerticalAlignment="Center" Text="B:" />
-
                                         <Slider Grid.Column="1" Value="{Binding Watermark.ColorB}" />
                                         <TextBlock Grid.Column="2"
                                                    Width="30"
                                                    Text="{Binding Watermark.ColorB}"
                                                    TextAlignment="Right" />
+                                        <TextBox Grid.Column="3"  
+                                                 Margin="20,0"
+                                                 VerticalAlignment="Center" 
+                                                 Text="{Binding Watermark.ColorB,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource ByteRangeConverter}}" />
                                     </Grid>
 
                                     <Grid Grid.Row="4" Margin="0,10">
@@ -397,15 +411,19 @@
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="80" />
                                         </Grid.ColumnDefinitions>
 
                                         <TextBlock VerticalAlignment="Center" Text="A:" />
-
                                         <Slider Grid.Column="1" Value="{Binding Watermark.ColorA}" />
                                         <TextBlock Grid.Column="2"
                                                    Width="30"
                                                    Text="{Binding Watermark.ColorA}"
                                                    TextAlignment="Right" />
+                                        <TextBox Grid.Column="3"  
+                                                 Margin="20,0"
+                                                 VerticalAlignment="Center" 
+                                                 Text="{Binding Watermark.ColorA,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource ByteRangeConverter}}" />
                                     </Grid>
                                 </Grid>
                             </Grid>
