--- a/ScreenshotHook.Presentation/Views/MainWindow.xaml
+++ b/ScreenshotHook.Presentation/Views/MainWindow.xaml
@@ -566,14 +566,14 @@
 
                         <Button Command="{Binding HookCommand}"
                                 Content="注入"
-                                IsEnabled="{Binding ProcessInfo.IsHooked, Converter={StaticResource InverseBoolConverter}}" />
+                                IsEnabled="{Binding CanHook}" />
 
                         <Button Grid.Column="1"
                                 Margin="5,0"
                                 Background="IndianRed"
                                 Command="{Binding UnHookCommand}"
                                 Content="取消注入"
-                                IsEnabled="{Binding ProcessInfo.IsHooked}" />
+                                IsEnabled="{Binding CanUnhook}" />
                     </Grid>
                 </StackPanel>
 
